# cpp-generic-programming

1/: 1.1.md  1.3_fixed.cc
2.1/: .gitignore  Makefile  benchmark.cc  benchmark.hh  cow_string.hh  main.cc
3.1/: CMakeLists.txt
3.1/src/: matrix2x2.hh  nth_power.hh
3.1/tests/: run_tests.cc
3.2/: fixed_addable.cc
4/: 4.1.md
8/: 8.1.md  8.2.md
8/8.3/: CMakeLists.txt
8/8.3/src/: physical_quantities.hh
8/8.3/tests/: test_quantities.cc
exam-sem2/: 2-SnapshotSet.cc  3-sieve.cc  CMakeLists.txt
